<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.ProfileFragment">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/red_1"
        android:contentDescription="@string/background_img"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic"
        tools:srcCompat="@color/red_1" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_background"
        tools:src="@color/black" />

    <EditText
        android:id="@+id/input_profile_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="@font/rubik_medium"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/nicolas_aleixo"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile" />

    <EditText
        android:id="@+id/input_profile_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik_medium"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/nicolas_gmail_com"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/input_profile_name"
        app:layout_constraintStart_toStartOf="@+id/input_profile_name"
        app:layout_constraintTop_toBottomOf="@+id/input_profile_name" />

    <Button
        android:id="@+id/button_save_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/salvar"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/input_profile_email"
        app:layout_constraintStart_toStartOf="@+id/input_profile_email" />

</androidx.constraintlayout.widget.ConstraintLayout>