<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_white"
        tools:context=".presentation.home.HomeFragment">

        <ImageView
            android:id="@+id/img_logout"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvNameUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvNameUser"
            app:srcCompat="@drawable/ic_logout_black_24dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvNameUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="marquee"
            android:fontFamily="@font/rubik_medium"
            android:lines="1"
            android:text="@string/oi_nicolas"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
            app:layout_constraintEnd_toStartOf="@+id/img_logout"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toTopOf="@+id/profile_image" />

        <TextView
            android:id="@+id/tv_description_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/fique_por_dentro_das"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/tvNameUser"
            app:layout_constraintStart_toStartOf="@+id/profile_image"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <TextView
            android:id="@+id/tv_description_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/principais_not_cias"
            android:textColor="@color/red_1"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_description_one"
            app:layout_constraintStart_toStartOf="@+id/tv_description_one"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_one" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_principal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_two"
            tools:listitem="@layout/items_recycler_principal" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_sub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/recycler_principal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/recycler_principal"
            app:layout_constraintTop_toBottomOf="@+id/recycler_principal"
            tools:listitem="@layout/items_recycler_sub" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_sub_principal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/recycler_sub"
            app:layout_constraintStart_toStartOf="@+id/recycler_sub"
            app:layout_constraintTop_toBottomOf="@+id/recycler_sub"
            tools:listitem="@layout/items_recycler_principal" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>